task3 -mici adaugari

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "liste.h": "c",
         "main.h": "c",
         "coada.h": "c",
-        "math.h": "c"
+        "math.h": "c",
+        "limits.h": "c"
     }
 }
