--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "main.h": "c",
         "coada.h": "c",
         "math.h": "c",
-        "limits.h": "c"
+        "limits.h": "c",
+        "bts.h": "c",
+        "stiva.h": "c"
     }
 }
