Task[5] - Inceput (functii de rotatie)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "math.h": "c",
         "limits.h": "c",
         "bts.h": "c",
-        "stiva.h": "c"
+        "stiva.h": "c",
+        "limits": "c"
     }
 }
