--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "limits.h": "c",
         "bts.h": "c",
         "stiva.h": "c",
-        "limits": "c"
+        "limits": "c",
+        "btsandavl.h": "c"
     }
 }
